--- a/style.css
+++ b/style.css
@@ -43,6 +43,20 @@ form {
   margin-top: 38px;
   border-radius: 8px;
   background: #fafafc;
-
+  padding: 64px;
   min-height: 300px;
+}
+
+fieldset {
+  border: none;
+}
+
+fieldset legend {
+  font-family: 'Archivo';
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 34px;
+  border-bottom: 1px solid #e6e6f0;
+  padding-bottom: 16px;
+  width: 100%;
 }
