Ajustando novos campos dentro do fieldset

--- a/style.css
+++ b/style.css
@@ -64,6 +64,12 @@ fieldset {
   border: none;
 }
 
+.fieldset-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 fieldset legend {
   font-family: 'Archivo';
   font-weight: 600;
@@ -90,10 +96,15 @@ fieldset legend {
   margin-left: 12px;
   font-size: 12px;
   line-height: 20px;
-  color: #c1bccc;
+  color: #afafaf;
 }
 
-.input-wrapper input {
+.input-wrapper label span:hover {
+  color: #6c6a71;
+}
+
+.input-wrapper input,
+.input-wrapper textarea {
   background: #fafafc;
 
   border: 1px solid #e6e6f0;
@@ -103,5 +114,10 @@ fieldset legend {
   padding: 0 24px;
   font-size: 16px;
   line-height: 26px;
-  color: #c1bccc;
+  color: #6c6a71;
+}
+
+.input-wrapper textarea {
+  padding: 0;
+  height: 168px;
 }
