--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 body,
 input,
-button,
 select,
 textarea {
   font-family: 'Poppins', sans-serif;
@@ -54,7 +53,7 @@ header p {
 
 form {
   margin-top: 38px;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   background: #fafafc;
   padding: 64px;
   min-height: 300px;
@@ -183,4 +182,32 @@ fieldset legend {
 
 .checkbox-wrapper input:focus + label::before {
   outline: 2px solid black;
+}
+
+footer {
+  background: #f0f0f4;
+  height: 136px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 64px;
+  margin-bottom: 100px;
+
+  border-top: 1px solid #d6d6d6;
+  border-radius: 0 0 8px 8px;
+}
+
+footer .button {
+  height: 56px;
+  background: #04d361;
+  border-radius: 8px;
+  border: 0;
+  font-family: 'Archivo';
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  color: #fff;
+}
+
+footer .button:hover {
+  background: #08a04c;
 }
